[gd_scene load_steps=6 format=3 uid="uid://bqpth4hjbjugk"]

[ext_resource type="Script" uid="uid://75yi1ekf0714" path="res://GUI/game_ui.gd" id="1_2if7r"]
[ext_resource type="LabelSettings" uid="uid://1enntx58kkhe" path="res://GUI/Game_UI.tres" id="2_3qqlp"]
[ext_resource type="Theme" uid="uid://de8ppri0rbmul" path="res://GUI/Button_Theme.tres" id="3_fbkqq"]
[ext_resource type="FontFile" uid="uid://jeu6ag8vn6v7" path="res://GUI/Bitrimus.ttf" id="4_w20xb"]

[sub_resource type="LabelSettings" id="LabelSettings_c1gip"]
font = ExtResource("4_w20xb")
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 9
outline_color = Color(0.251859, 0, 0.0484084, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_2if7r")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 110.0
offset_bottom = 251.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Action_Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Action:
"
label_settings = ExtResource("2_3qqlp")

[node name="Dynamic_Action" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "None"
label_settings = ExtResource("2_3qqlp")

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Clicked_Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
text = " Clicked:"
label_settings = ExtResource("2_3qqlp")

[node name="Dynamic_Clicked" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "None"
label_settings = ExtResource("2_3qqlp")

[node name="Base_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_fbkqq")
text = "Place Base"

[node name="Fighter_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_fbkqq")
text = "Fighter"

[node name="Influence_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_fbkqq")
text = "Influence"

[node name="Intelligence_Network_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbkqq")
text = "Intelligence"

[node name="Logistics_Network_Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbkqq")
text = "Logistics"

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="Phase_Button" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_fbkqq")
text = "NEXT PHASE"

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Player_Switch_Button" type="Button" parent="PanelContainer2/VBoxContainer/HSplitContainer"]
layout_mode = 2
theme = ExtResource("3_fbkqq")
text = "Cycle Player:"

[node name="Dynamic_Player" type="Label" parent="PanelContainer2/VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "[Current Player]"
label_settings = ExtResource("2_3qqlp")

[node name="Current_Phase" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.5
offset_right = 25.5
offset_bottom = 23.0
grow_horizontal = 2
text = "CURRENT PHASE"
label_settings = ExtResource("2_3qqlp")

[node name="Error_Message" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -356.0
offset_top = -115.0
offset_right = 356.0
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "ERROR: MILITARY UNITS CAN ONLY BE PLACED ON BASES"
label_settings = SubResource("LabelSettings_c1gip")
horizontal_alignment = 1

[node name="Error_timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="PanelContainer/VBoxContainer/Base_Button" to="." method="_on_base_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Fighter_Button" to="." method="_on_fighter_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Influence_Button" to="." method="_on_influence_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Intelligence_Network_Button" to="." method="_on_intelligence_network_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Logistics_Network_Button" to="." method="_on_logistics_network_button_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/Phase_Button" to="." method="_on_phase_button_pressed"]
[connection signal="pressed" from="PanelContainer2/VBoxContainer/HSplitContainer/Player_Switch_Button" to="." method="_on_player_switch_button_pressed"]
[connection signal="timeout" from="Error_timer" to="." method="_on_error_timer_timeout"]
